--- a/index.html
+++ b/index.html
@@ -168,9 +168,19 @@
 
 								<h2 style="margin-top: 30px;font-size: 30px;">Autonomous Control Algorithm Demonstration</h2>
 
- 									 <video width="960" height="540" controls>
+ 									 <!-- <video width="960" height="540" controls>
    								     <source src="videos/IMG_0749.MOV" type="video/mp4">
-  									 </video>
+  									 </video> -->
+
+									 <div class="video-container">
+										<iframe width="560" height="315"
+										src="https://www.youtube.com/shorts/ui93FdPq0fI"
+										frameborder="0"
+										allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+										allowfullscreen>
+										</iframe>
+									</div>
+									 
 							</article>
 
 
@@ -218,9 +228,22 @@
 
 								<h2 style="margin-top: 30px;font-size: 30px;"> I'm a fan of the OG - MJ!!!</h2>
 
- 									 <video width="960" height="540" controls>
-   								     <source src="videos/Music_Reactive_LED.MOV" type="video/mp4">
-  									 </video>
+ 									 <!-- <video width="960" height="540" controls>
+   								     <source src="https://youtube.com/shorts/0feYiHCP59g?feature=share" type="video/mp4">
+  									 </video> -->
+
+									 <!-- <div class="video-container">
+										<iframe width="560" height="315"
+										src="https://youtube.com/shorts/0feYiHCP59g?feature=share"
+										frameborder="0"
+										allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+										allowfullscreen>
+										</iframe>
+									</div> -->
+
+									<a href="https://youtube.com/shorts/0feYiHCP59g?feature=share" target="_blank">
+ 									 Watch the video on YouTube
+									</a>
 							</article>
 
 
