--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
   									 </video> -->
 
 									 <div class="video-container">
-										<iframe width="560" height="315"
-										src="https://www.youtube.com/shorts/ui93FdPq0fI"
+										<iframe width="1080" height="720"
+										src="https://www.youtube.com/embed/ui93FdPq0fI"
 										frameborder="0"
 										allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 										allowfullscreen>
