--- a/index.html
+++ b/index.html
@@ -14,15 +14,21 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
   
   <style>
+	 * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
     body {
       font-family: Arial, sans-serif;
     }
 
     .top-photo {
-      text-align: center;
-      background-color: #f4f4f4;
-	  margin-top: 15px;
-	  margin-bottom: -20px;
+      display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 0 0 0;
+    background-color: #f4f4f4;
     }
 
     .top-photo img {
@@ -31,32 +37,33 @@
       object-fit: cover;
 	  object-position: center 19%;
       border-radius: 70%;
-	  margin: 30px;
       border: 5px solid #969292;
     }
 	#intro {
       text-align: center;
-      margin-top: -20px;
-	  padding-top: 2px;
+      padding: 50px 20px 40px 20px;
+      background-color: #1b1f23; /* assuming your dark section starts here */
+      color: white;
     }
 
     .intro h1 {
-	  padding: 0;
-      font-size: 30px;
-	  text-align: center;
+	  font-size: 42px;
+    margin-bottom: 10px;
+    font-weight: 800;
+    letter-spacing: 2px;
     }
 
     #intro h2 {
-      margin: 10px;
-      font-size: 25px;
-      font-weight: normal;
-	  text-align: center;
+      font-size: 20px;
+    margin: 10px 0;
+    font-weight: 600;
     }
 
     #intro p {
-      font-size: 21px;
-      margin: 10px;
-	  text-align: center;
+      font-size: 18px;
+    font-style: italic;
+    margin-top: 15px;
+    color: #ddd;
 	}
   </style>
 </head>
