--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<div id="intro">
 
 						<h1> Ashwin Kumar Rangarajan </h1>
-						<h2> <a href ="https://www.linkedin.com/company/ford-motor-company/posts/?feedView=all" target="_blank"> Chassis Controls Engineer @ Ford Motor Company </a> | 
+						<h2> <a href ="https://www.linkedin.com/company/ford-motor-company/posts/?feedView=all" target="_blank"> Chassis Controls Engineer Intern @ Ford Motor Company </a> | 
 							<a href="https://www.linkedin.com/school/cuicar/posts/?feedView=all" target="_blank"> Ex-Deep Orange Orange 16 Intern | </a> <br/> 
 							<a href = "https://www.linkedin.com/company/royal-enfield/posts/?feedView=all" target="_blank"> Ex-Royal Enfield Assistant Manager - Chassis Testing & Validation | </a>
 							Automobile Enthusiast</h2>
@@ -119,7 +119,7 @@
 
 						<article class="post featured" style="margin-top: 0;  padding-top: 0; margin-bottom: 20px;">
 
-								<header class="major" style="margin-top: 0; padding-top: 0; margin-bottom: 0;">
+								<header class="major">
 									<span class="date" style="font-size: 20px;"> <strong> January to May 2024 </strong></span>
 									<h2 style="margin-top: -50px; font-size: 30px;"> <a href="#"> Vehicle stability control using optimal torque allocation in four-wheel independent hub motor vehicle </a></h2>
 									<p style="margin-top: 5px; font-size: 20px; text-align: justify;"> ➤ Designed a hierarchical model-based control system using Direct Yaw Moment Control (DYC) to enhance yaw stability.
