--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
 
 						<article class="post featured" style="margin-top: 0;  padding-top: 0; margin-bottom: 20px;">
 
-								<header class="major">
+								<header class="major" style="margin-top: 0; padding-top: 0; margin-bottom: 0;">
 									<span class="date" style="font-size: 20px;"> <strong> January to May 2024 </strong></span>
-									<h2 style="margin-top: -10px; font-size: 30px;"> <a href="#"> Vehicle stability control using optimal torque allocation in four-wheel independent hub motor vehicle </a></h2>
-									<p style=" font-size: 20px; text-align: justify;"> ➤ Designed a hierarchical model-based control system using Direct Yaw Moment Control (DYC) to enhance yaw stability.
+									<h2 style="margin-top: -50px; font-size: 30px;"> <a href="#"> Vehicle stability control using optimal torque allocation in four-wheel independent hub motor vehicle </a></h2>
+									<p style="margin-top: 5px; font-size: 20px; text-align: justify;"> ➤ Designed a hierarchical model-based control system using Direct Yaw Moment Control (DYC) to enhance yaw stability.
 
 									<br /> ➤ Implemented individual wheel torque vectoring and braking algorithms for active vehicle dynamics control.
  
