--- a/index.html
+++ b/index.html
@@ -245,24 +245,21 @@
 									</p>
 								</header>
 
-								<h2 style="margin-top: 30px;font-size: 30px;"> I'm a fan of the OG - MJ!!!</h2>
+								<h2 style="margin-top: 30px;font-size: 30px;"> Music reactive LED</h2>
 
  									 <!-- <video width="960" height="540" controls>
    								     <source src="https://youtube.com/shorts/0feYiHCP59g?feature=share" type="video/mp4">
   									 </video> -->
 
-									 <!-- <div class="video-container">
-										<iframe width="560" height="315"
-										src="https://youtube.com/shorts/0feYiHCP59g?feature=share"
+									 <div class="video-container">
+										<iframe width="1080" height="720"
+										src="https://www.youtube.com/embed/IkWAoybO4-A"
 										frameborder="0"
 										allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 										allowfullscreen>
 										</iframe>
-									</div> -->
+									</div>
 
-									<a href="https://youtube.com/shorts/0feYiHCP59g?feature=share" target="_blank">
- 									 Watch the video on YouTube
-									</a>
 							</article>
 
 
