--- a/generic.html
+++ b/generic.html
@@ -21,7 +21,7 @@
       <ul class="links">
         <li><a href="index.html">Projects</a></li>
         <li class="active"><a href="generic.html">Skills</a></li>
-        <li><a href="elements.html">Elements Reference</a></li>
+        <!-- <li><a href="elements.html">Elements Reference</a></li> -->
       </ul>
       <ul class="icons">
         <li><a href="https://www.facebook.com/rangarajan.ashwinkumar" target="_blank" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -33,56 +33,73 @@
     <!-- Main -->
     <div id="main" class ="fade-in">
 
-      <section id="technical-skills" style="font-family: 'Times New Roman', Times, serif; padding: 20px 60px;">
-  <h2 style="text-align: center; margin-bottom: 25px;">🔧 Technical Skills</h2>
+      <section id="technical-skills" style="font-family: 'Arial Nova', Arial, sans-serif; padding: 20px 60px;">
+  <h2 style="text-align: center; margin-bottom: 25px;">Technical Skills</h2>
 
-  <div style="display: flex; flex-direction: column; gap: 20px;">
+  <!-- Programming Languages -->
+  <h3 style="margin-top: 40px;">💻 Programming Languages</h3>
+  <div style="display: flex; justify-content: center; gap: 60px; flex-wrap: wrap;">
+    <div style="text-align: center;"><img src="images/icons/Matlab_Icon.jpg" alt="MATLAB" style="height: 48px;"><br><strong style="font-size: 14px;">MATLAB</strong></div>
+    <div style="text-align: center;"><img src="images/icons/C.png" alt="C" style="height: 48px;"><br><strong style="font-size: 14px;">C</strong></div>
+    <div style="text-align: center;"><img src="images/icons/CPP.png" alt="C++" style="height: 48px;"><br><strong style="font-size: 14px;">C++</strong></div>
+    <div style="text-align: center;"><img src="images/icons/imagesarduino_Icon.png" alt="Arduino" style="height: 48px;"><br><strong style="font-size: 14px;">Arduino</strong></div>
+  </div>
 
-    <!-- ROW 1 -->
-    <div style="display: flex; justify-content: space-between; gap: 100px;">
-      <div style="flex: 1;">
-        <h3 style="margin: 0 0 6px;"><i class="fas fa-code"></i> Programming Languages</h3>
-        <p style="margin: 0;">MATLAB, C, C++, Arduino</p>
-      </div>
-      <div style="flex: 1;">
-        <h3 style="margin: 0 0 6px;"><i class="fas fa-cogs"></i> Simulation & Calibration Tools</h3>
-        <p style="margin: 0;">Simulink, CarSim, Stateflow, dSPACE Controldesk, ATI Vision</p>
-      </div>
+  <!-- Simulation & Calibration Tools -->
+  <h3 style="margin-top: 40px;">🛠️ Simulation & Calibration Tools</h3>
+  <div style="display: flex; justify-content: center; gap: 60px; flex-wrap: wrap;">
+    <div style="text-align: center;"><img src="images/icons/Simulink.jpg" alt="Simulink" style="height: 48px;"><br><strong style="font-size: 14px;">Simulink</strong></div>
+    <div style="text-align: center;"><img src="images/icons/Stateflow.jpg" alt="Stateflow" style="height: 48px;"><br><strong style="font-size: 14px;">Stateflow</strong></div>
+    <div style="text-align: center;"><img src="images/icons/Carsim.jpg" alt="CarSim" style="height: 48px;"><br><strong style="font-size: 14px;">CarSim</strong></div>
+    <div style="text-align: center;"><img src="images/icons/dSpace.png" alt="dSPACE" style="height: 48px;"><br><strong style="font-size: 14px;">Control Desk</strong></div>
+    <div style="text-align: center;"><img src="images/icons/ATI_Vision.png" alt="ATI Vision" style="height: 48px;"><br><strong style="font-size: 14px;">Vision</strong></div>
+	<div style="text-align: center;"><img src="images/icons/Vector.png" alt="CANdb++" style="height: 48px;"><br><strong style="font-size: 14px;">CANdb++</strong></div>
+  </div>
+
+  <!-- Data Acquisition Software -->
+  <h3 style="margin-top: 40px;">📈 Data Acquisition Software</h3>
+  <div style="display: flex; justify-content: center; gap: 60px; flex-wrap: wrap;">
+    <div style="text-align: center;"><img src="images/icons/ATI_Vision.png" alt="Vision Data Analyzer" style="height: 48px;"><br><strong style="font-size: 14px;">Vision Data Analyzer</strong></div>
+	    <div style="text-align: center;"><img src="images/icons/Kvaser.jpg" alt="Kvaser" style="height: 48px;"><br><strong style="font-size: 14px;">Kvaser CANKing</strong></div>
+    <div style="text-align: center;"><img src="images/icons/Simcenter_Testlab.png" alt="Testlab" style="height: 48px;"><br><strong style="font-size: 14px;">Siemens Testlab</strong></div>
+    <div style="text-align: center;"><img src="images/icons/2D_Racelogic.png" alt="2D Racelogic" style="height: 48px;"><br><strong style="font-size: 14px;">2D Racelogic</strong></div>
+    <div style="text-align: center;"><img src="images/icons/VBox.jpg" alt="VBox" style="height: 48px;"><br><strong style="font-size: 14px;">VBox</strong></div>
+    <div style="text-align: center;"><img src="images/icons/HBM.png" alt="HBM eDAQ" style="height: 48px;"><br><strong style="font-size: 14px;">HBM eDAQ</strong></div>
+  </div>
+
+  <!-- Modeling Tools -->
+  <h3 style="margin-top: 40px;">📐 Modeling Tools</h3>
+  <div style="display: flex; justify-content: center; gap: 60px; flex-wrap: wrap;">
+    <div style="text-align: center;"><img src="images/icons/Creo.png" alt="PTC Creo" style="height: 48px;"><br><strong style="font-size: 14px;">Creo Parametric</strong></div>
+    <div style="text-align: center;"><img src="images/icons/Siemens_NX.png" alt="Siemens NX" style="height: 48px;"><br><strong style="font-size: 14px;">Siemens NX</strong></div>
+    <div style="text-align: center;"><img src="images/icons/SolidWorks.png" alt="SolidWorks" style="height: 48px;"><br><strong style="font-size: 14px;">SolidWorks</strong></div>
+  </div>
+
+  <!-- Other Applications -->
+  <h3 style="margin-top: 40px;">🧰 Other Applications</h3>
+  <div style="display: flex; justify-content: center; gap: 60px; flex-wrap: wrap;">
+    <div style="text-align: center;"><img src="images/icons/MS_Word_Icon.jpg" alt="MS Office" style="height: 48px;"><br><strong style="font-size: 14px;">Word</strong></div>
+	<div style="text-align: center;"><img src="images/icons/MS_Excel_Icon.jpg" alt="MS Office" style="height: 48px;"><br><strong style="font-size: 14px;">Excel</strong></div>
+    <div style="text-align: center;"><img src="images/icons/G_Suite.png" alt="G-Suite" style="height: 48px;"><br><strong style="font-size: 14px;">G-Suite</strong></div>
+    <div style="text-align: center;"><img src="images/icons/Power_BI.png" alt="Power BI" style="height: 48px;"><br><strong style="font-size: 14px;">Power BI</strong></div>
+  </div>
+
+  <!-- Training -->
+  <h3 style="margin-top: 40px;">📚 Training</h3>
+  <div style="display: flex; justify-content: center; gap: 60px; flex-wrap: wrap;">
+    <div style="text-align: center;"><img src="images/icons/Electrical_Safety.jpg" alt="Safety" style="height: 48px;"><br><strong style="font-size: 14px;">HV/LV Electrical Safety</strong></div>
+	<div style="text-align: center;"><img src="images/icons/Tool_Handling.png" alt="Tool handling" style="height: 48px;"><br><strong style="font-size: 14px;">Tools handling</strong></div>
+    <div style="text-align: center;"><img src="images/icons/7_Qc_Tools.png" alt="Quality Tools" style="height: 48px;"><br><strong style="font-size: 14px;">Quality Tools</strong></div>
+    <div style="text-align: center;"><img src="images/icons/FMEA.jpg" alt="FMEA" style="height: 48px;"><br><strong style="font-size: 14px;">FMEA</strong></div>
+  </div>
+
+  <!-- Riding -->
+  <h3 style="margin-top: 40px;">🏍️ Riding</h3>
+  <div style="display: flex; justify-content: center;">
+    <div style="text-align: center;">
+      <img src="images/icons/Motorcycle.png" alt="Riding" style="height: 48px;"><br>
+      <strong style="font-size: 14px;">Motorcycle Off-road & Trail Riding</strong>
     </div>
-
-    <!-- ROW 2 -->
-    <div style="display: flex; justify-content: space-between; gap: 100px;">
-      <div style="flex: 1;">
-        <h3 style="margin: 0 0 6px;"><i class="fas fa-database"></i> Data Acquisition Software</h3>
-        <p style="margin: 0;">Vision Data Analyzer, Siemens Testlab, 2D Racelogic, VBox Automotive, HBM eDaq</p>
-      </div>
-      <div style="flex: 1;">
-        <h3 style="margin: 0 0 6px;"><i class="fas fa-drafting-compass"></i> Modelling Tools</h3>
-        <p style="margin: 0;">PTC Creo Parametric, Siemens NX, SolidWorks</p>
-      </div>
-    </div>
-
-    <!-- ROW 3 -->
-    <div style="display: flex; justify-content: space-between; gap: 100px;">
-      <div style="flex: 1;">
-        <h3 style="margin: 0 0 6px;"><i class="fas fa-tools"></i> Other Applications</h3>
-        <p style="margin: 0;">Kvaser CANKing, Vector CANdb++, MS-Office, G-Suite, Power BI</p>
-      </div>
-      <div style="flex: 1;">
-        <h3 style="margin: 0 0 6px;"><i class="fas fa-chalkboard-teacher"></i> Training</h3>
-        <p style="margin: 0;">HV & LV Electrical Systems Safety, Basic Quality Tools, FMEA Analysis</p>
-      </div>
-    </div>
-
-    <!-- ROW 4 -->
-    <div style="display: flex; justify-content: space-between; gap: 100px;">
-      <div style="flex: 1;">
-        <h3 style="margin: 0 0 6px;"><i class="fas fa-motorcycle"></i> Riding</h3>
-        <p style="margin: 0;">Professionally trained in off-road & trail motorcycle riding</p>
-      </div>
-      <div style="flex: 1;"></div> <!-- Empty right column -->
-    </div>
-
   </div>
 </section>
     </div>
