--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <style>
     body {
-      font-family:  'Times New Roman', Times, serif;
+      font-family: 'Arial Nova', Arial, sans-serif;
     }
 
     .top-photo {
@@ -44,8 +44,7 @@
 	  padding: 0;
       font-size: 25px;
 	  text-align: center;
-	  font-family:  'Times New Roman', Times, serif;
-    }
+	  font-family: 'Arial Nova', Arial, sans-serif;    }
 
     #intro h2 {
       margin: 10px;
@@ -143,7 +142,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html"> Projects </a></li>
 							<li><a href="generic.html"> Skills</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<!-- <li><a href="elements.html">Elements Reference</a></li> -->
 						</ul>
 
 						<ul class="icons">
@@ -260,10 +259,15 @@
 								<header class="major">
 									<span class="date" style="font-size: 20px;"> <strong> January to April 2025 </strong></span>
 									<h2 style="font-size: 30px;"><a href="#"> HMI screen design using MoTeC C1812 display device</a></h2>
-									<p style="font-size: 20px; text-align: justify;  margin-bottom: 5px;">Developed a customized Human-Machine Interface (HMI) using the MoTeC C1812 display, integrating 
-										real-time vehicle data through a robust CAN communication setup. Designed an intuitive graphical user interface (GUI) to visualize key performance 
-										and diagnostic parameters, enhancing situational awareness for the driver. Implemented seamless page navigation using steering wheel-mounted buttons,
-										 enabling driver-friendly interaction and smooth access to multi-page display content during dynamic testing scenarios.
+									<p style="font-size: 20px; text-align: justify;  margin-bottom: 5px;">➤ Developed a customized Human-Machine Interface (HMI) using the MoTeC C1812 display.
+
+									<br /> ➤ Integrated real-time vehicle data via a robust CAN communication architecture.
+
+									<br /> ➤ Designed an intuitive GUI to visualize performance and diagnostic parameters.
+
+									<br /> ➤ Enabled seamless multi-page navigation through steering wheel-mounted buttons.
+
+									<br /> ➤ Enhanced driver interaction and situational awareness during dynamic testing.
 									</p>
 								</header>
 
@@ -295,10 +299,15 @@
 								<header class="major" style="margin-top: 0; padding-top: 0; margin-bottom: 0;">
 									<span class="date" style="font-size: 20px;"> <strong> May 2025 </strong></span>
 									<h2 style="margin-top: 0; padding-top: 0; margin-bottom: 15px; font-size: 30px;"><a href="#"> Music-Reactive LED Visualizer Using Arduino </a></h2>
-									<p style="margin-top: 5px; font-size: 20px; text-align: justify;">Designed and built a DIY sound-reactive LED system using <strong> Arduino Uno board</strong> to create 
-										dynamic lighting effects that synchronize with music. Integrated a sound sensor module to capture audio signals and programmed the microcontroller 
-										to trigger colorful LED patterns based on audio amplitude. Tuned signal sensitivity and implemented basic filtering to enhance response accuracy. 
-										This interactive visualizer delivers real-time light animations, making it ideal for ambient lighting and musical displays.
+									<p style="margin-top: 5px; font-size: 20px; text-align: justify;">➤ Designed and built a DIY sound-reactive LED system using an Arduino Uno board.
+
+									<br /> ➤ Integrated a sound sensor module to detect audio signals in real time.
+
+									<br /> ➤ Programmed the microcontroller to generate dynamic LED patterns synchronized to music based on amplitude.
+
+									<br /> ➤ Fine-tuned the sensor sensitivity and implemented basic filtering to improve signal accuracy.
+
+									<br /> ➤ This project created an engaging visual experience, ideal for ambient lighting and musical displays.
 									</p>
 								</header>
 
@@ -388,13 +397,13 @@
 							</form>
 						</section>
 					-->
-						<section class="split contact" style="padding-bottom: 0;">
+						<section class="split contact" style="font-family: 'Arial Nova', Arial, sans-serif; padding-bottom: 0;">
 							 <div class="three-column-layout" style="display: flex; width: 100%;  justify-content: center; gap: 40px;">
 
 							<section class="column" style="flex: 1; padding: 20px; text-align: center; padding-bottom: 5px;">
 								<h3 style= " font-size: 25px; text-align: center;">📍 Address</h3>
 								<p style="font-size: 15px; text-align: center;">
-									<a href="https://maps.google.com/maps?cid=3707318036026301668" target="_blank" style="color: inherit;">
+									<a href="https://maps.google.com/maps?cid=3707318036026301668" target="_blank" style="font-family: 'Arial Nova', Arial, sans-serif; color: inherit;">
 									<strong>5, Research Drive, Greenville, <br />
 								 South Carolina 29607,<br />
 								 United States of America </strong></p>
@@ -414,7 +423,7 @@
 							 </div>
 
   						<!-- Social icons below the grid -->
-							<section style="width: 100%; text-align: center; margin-top: 0px; padding-top: 10px; padding-bottom: 30px;">
+							<section style="font-family: 'Arial Nova', Arial, sans-serif; width: 100%; text-align: center; margin-top: 0px; padding-top: 10px; padding-bottom: 30px;">
 								
 								<ul class="icons alt" style="justify-content: center;">
 									<h3 style= " font-size: 25px;">Social Media</h3>
@@ -429,7 +438,7 @@
 					</footer>
 
 				<!-- Copyright -->
-					<div id="copyright" style="margin-top: 15px;">
+					<div id="copyright" style="font-family: 'Arial Nova', Arial, sans-serif; margin-top: 15px;">
 						<ul>
 							<li>&copy; 2025 Ashwin Kumar Rangarajan. <br /> All rights reserved.</li>
 						</ul>
