--- a/generic.html
+++ b/generic.html
@@ -1,6 +1,39 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+
+	<style>
+  body {
+    font-family: 'Arial Nova', Arial, sans-serif;
+  }
+
+  html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
+
+  img, video, iframe {
+    max-width: 100%;
+    height: auto;
+  }
+
+  .video-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
+  }
+
+  .video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+</style>
+
   <title>Technical Skills</title>
   <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
