--- a/index.html
+++ b/index.html
@@ -23,23 +23,26 @@
       background-color: #f4f4f4;
 	  padding-top: 20px;
 	  margin-top: 15px;
-	  margin-bottom: -100px;
+	  margin-bottom: -150px;
     }
 
     .top-photo img {
+	  display: block !important;
+      visibility: visible !important;
+      opacity: 1 !important;
       width: 100%;
       max-width: 350px;
 	  aspect-ratio: 1 / 1;
       object-fit: cover;
 	  object-position: center top;
       border-radius: 50%;
-	  margin: 30px auto;
-      border: 5px solid #969292;
-	  display: block;
-    }
+      margin: 0 auto 30px;
+	  border: 5px solid #969292;
+	}
+
 	#intro {
       text-align: center;
-      margin-top: -150px;
+      margin-top: -100px;
 	
     }
 
