--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!-- ASHWIN KUMAR RANGARAJAN'S PORTFOLIO HTML CODE -->>
-<!-- Git checkout -->
+<!-- Git checkout Part - 2 -->
 
 <html>
 
